Modal block works fine

--- a/index.html
+++ b/index.html
@@ -3562,10 +3562,12 @@
 			</g>
 		</g>
 	</svg>
-	<div id="modal">
-		<div class="leftpart"></div>
+	<div id="runemap-modal">
+		<div class="leftpart">
+			<div class="runename-block">Sample Name</div>
+		</div>
 		<div class="rightpart">
-			<button>Close</button>
+			<button id="close-modal-btn">Close</button>
 		</div>
 	</div>
 	<script src="./scripts/main.js"></script>
